central-repo/mongodb/deployment.yaml
# statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongodb
spec:
  serviceName: mongodb-service
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongodb/mongodb-atlas-local
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
            - name: mongodb-keyfile
              mountPath: /data/configdb/keyfile
              subPath: keyfile
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
        - name: mongodb-keyfile
          secret:
            secretName: mongodb-keyfile
            items:
              - key: mongodb-keyfile
                path: keyfile
